--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -71,6 +71,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="DTO_KhachHang.cs" />
+    <Compile Include="DTO_NCC.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
   </ItemGroup>
