--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -72,6 +72,7 @@
   <ItemGroup>
     <Compile Include="DTO_KhachHang.cs" />
     <Compile Include="DTO_NCC.cs" />
+    <Compile Include="DTO_PhieuNhap.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
   </ItemGroup>
