--- a/DTO/DTO.csproj
+++ b/DTO/DTO.csproj
@@ -74,6 +74,7 @@
     <Compile Include="DTO_NCC.cs" />
     <Compile Include="DTO_PhieuNhap.cs" />
     <Compile Include="DTO_SanPham.cs" />
+    <Compile Include="DTO_SoQuy.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="SqlServerTypes\Loader.cs" />
   </ItemGroup>
